# aquifer

./: .gitignore  README.md  pyproject.toml
src/aquifer/: __main__.py
src/aquifer/collect/podcasts/: podcasts.py
src/aquifer/collect/youtube/: retrieve_channel.py
src/aquifer/podcasts/: bulk.py
src/aquifer/research/: 10k.py  main.py  query_string.jinja2  question_areas.jsonl  resource_quality_rubric.jinja2  response_exa.txt  response_openai.txt  response_perplexity.txt  snapshot.py  snapshot_output.md
src/aquifer/research/certifications/: c.py
src/aquifer/research/exa_query/: main.py
src/aquifer/research/google_deep_research/: deep_research.py
src/aquifer/research/openai_query/: main.py
src/aquifer/research/perplexity/: main.py  prompts.md  research_results.md
src/aquifer/research/perplexity_query/: main.py
src/aquifer/research/strategy/: main.py  output.md
src/aquifer/research/strategy/prompts/: queries.json
src/aquifer/rss/: rss.py
src/aquifer/strategy/: main.py  output.bak  output.md
src/aquifer/strategy/prompts/: boilerplate.jinja2
src/aquifer/youtube/: retrieve_channel.py
